Meilleur design Page de Détails

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">3ANDM Project</string>
-    <string name="ingredients_label">Ingredients</string>
+    <string name="updated">Modifié le&#160;</string>
 </resources>
