Barre de Recherche

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">3ANDM Project</string>
     <string name="updated">Modifié le&#160;</string>
+    <string name="search">Rechercher</string>
 </resources>
