--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">3ANDM Project</string>
     <string name="updated">Modifié le&#160;</string>
     <string name="search">Rechercher</string>
+    <string name="submitText">OK</string>
 </resources>
